--- a/views/db.ejs
+++ b/views/db.ejs
@@ -2,9 +2,9 @@
     <% results.forEach(function(r) { %>
     <li>
         <strong>
-            <%= r.Name %></strong>
+            <%= r.name %></strong>
         <small>
-            <%= r.AccountNumber %></small>
+            <%= r.accountnumber %></small>
     </li>
     <% }); %>
 </ul>
