added contacts and accounts

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -21,14 +21,21 @@
     </div>
 
     <br>
-    <h3>Node.js</h3>
-    <p class='just'>Express is agnostic as to which templating language you use. Templating languages can be a hot
-        topic of debate.Here Iam going to use Jade.</p>
-    <p class='just'>Again Express is agnostic to what you use to generate your CSS-you can use vanilla CSS but for this
-        example I'm using Stylus.
-    </p>
+    <h3>Your Saleforce Contacts</h3>
+    <ul>
+        <% results.forEach(function(r) { %>
+        <li>
+            <strong>
+                <%= r.name %></strong>
+            <small>
+                <%= r.email %></small>
+            <small>
+                <%= r.title %></small>
+        </li>
+        <% }); %>
+    </ul>
     <footer>
-        Running on node with express and ejs
+        Created @ bzLabs.io
     </footer>
     </home>
 
