--- a/views/account.ejs
+++ b/views/account.ejs
@@ -1,40 +1,38 @@
 <html>
 
 <head>
-    <link href="/css/style.css" rel="stylesheet" type="text/css">
-
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+        crossorigin="anonymous">
+    <link href="css/stickyfooter.css" rel="stylesheet">
 </head>
 
 <body>
-    <div>
+    <%- include navbar.ejs %>
+    <div class="container">
         <h1>
             <%= title %>
         </h1>
-        <ul>
-            <% for (var i=0; i<nav.length;i++) {%>
+        <div class="container">
+            <h3 align="center">Your Saleforce Accounts</h3>
 
-            <li><a href="/<%=nav[i]%>">
-                    <%=nav[i]%> </a></li>
-            &nbsp;
-            <% } %>
-        </ul>
+            <ul class="list-group">
+                <% results.forEach(function(r) { %>
+                <li class="list-group-item">
+                    <div class="row">
+                        <div class="col-md-6 col-sm-6">
+                            <%= r.name %></strong>
+                        </div>
+                        <div class="col-md-6 col-sm-6">
+                            <%= r.accountnumber %></small>
+                        </div>
+                    </div>
+                </li>
+                <% }); %>
+            </ul>
+        </div>
     </div>
 
-    <br>
-    <h3>Your Saleforce Accounts</h3>
-    <ul>
-        <% results.forEach(function(r) { %>
-        <li>
-            <strong>
-                <%= r.name %></strong>
-            <small>
-                <%= r.accountnumber %></small>
-        </li>
-        <% }); %>
-    </ul>
-    <footer>
-        Created @ bzLabs.io
-    </footer>
+    <%- include footer.ejs %>
     </home>
 
 </html>
