--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -16,17 +16,28 @@
             <h3 align="center">Your Saleforce Contacts</h3>
 
             <ul class="list-group">
+                <div class="row">
+                    <div class="col-md-4 col-sm-6">
+                        <strong>Contact Name</strong>
+                    </div>
+                    <div class="col-md-4 col-sm-6">
+                        Email
+                    </div>
+                    <div class="col-md-4 col-sm-12">
+                        Phone
+                    </div>
+                </div>
                 <% results.forEach(function(r) { %>
                 <li class="list-group-item">
                     <div class="row">
                         <div class="col-md-4 col-sm-6">
-                            <%= r.name %></strong>
+                            <%= r.name %>
                         </div>
                         <div class="col-md-4 col-sm-6">
-                            <%= r.email %></small>
+                            <%= r.email %>
                         </div>
                         <div class="col-md-4 col-sm-12">
-                            <%= r.description %></small>
+                            <%= r.phone %>
                         </div>
                     </div>
                 </li>
@@ -36,6 +47,8 @@
     </div>
 
     <%- include footer.ejs %>
-    </home>
+    <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+</body>
 
 </html>
