--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="#">SF Connect</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown"
         aria-expanded="false" aria-label="Toggle navigation">
@@ -8,7 +8,7 @@
         <ul class="navbar-nav mr-auto">
             <% for (var i=0; i<nav.length;i++) {%>
 
-            <li class="nav-item"><a href="/<%=nav[i]%>">
+            <li class="nav-item"><a class="nav-link" href="/<%=nav[i]%>">
                     <%=nav[i]%> </a></li>
             &nbsp;
             <% } %>
