--- a/views/error.ejs
+++ b/views/error.ejs
@@ -3,12 +3,31 @@
 
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval' http://www.google.com">
-    <title>Heroku Salesforce Connect Demo</title>
+
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+        crossorigin="anonymous">
+    <link href="css/stickyfooter.css" rel="stylesheet">
+
 </head>
 
 <body>
-    <h2>Sorry, something went wrong. Please check your request!</h2>
+    <%- include navbar.ejs %>
+    <br>
+    <div class="container">
+        <h3>
+            <%= title %>
+        </h3>
+    </div>
+    <br>
+    <div class="container">
+        <h2>Sorry, something went wrong. Please check your request!</h2>
+    </div>
+    <%- include footer.ejs %>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
