--- a/views/account.ejs
+++ b/views/account.ejs
@@ -10,7 +10,7 @@
     <%- include navbar.ejs %>
     <div class="container">
         <h1>
-            <%= title %>
+            <%= title %>s
         </h1>
         <div class="container">
             <h3 align="center">Your Saleforce Accounts</h3>
@@ -21,7 +21,7 @@
                         <strong>Account Name</strong>
                     </div>
                     <div class="col-md-6 col-sm-6">
-                        Account Number
+                        <strong>Account Number</strong>
                     </div>
                 </div>
                 <% results.forEach(function(r) { %>
