--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -10,7 +10,7 @@
     <%- include navbar.ejs %>
     <div class="container">
         <h1>
-            <%= title %>
+            <%= title %>s
         </h1>
         <div class="container">
             <h3 align="center">Your Saleforce Contacts</h3>
@@ -21,10 +21,10 @@
                         <strong>Contact Name</strong>
                     </div>
                     <div class="col-md-4 col-sm-6">
-                        Email
+                        <strong>Email</strong>
                     </div>
                     <div class="col-md-4 col-sm-12">
-                        Phone
+                        <strong>Phone</strong>
                     </div>
                 </div>
                 <% results.forEach(function(r) { %>
